# votuderep

./: .gitignore  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt  run_checks.sh
.github/workflows/: publish-pypi.yml  test.yml
docs/: 404.html  index.html  objects.inv  search.js  votuderep.html
docs/api/: index.html
docs/cli/: index.html
docs/cli/derep/: index.html
docs/cli/filter/: index.html
docs/cli/getdbs/: index.html
docs/cli/splitcoverm/: index.html
docs/cli/tabulate/: index.html
docs/cli/trainingdata/: index.html
docs/installation/: index.html
docs/quickstart/: index.html
docs/search/: search_index.json
docs/votuderep/: commands.html  core.html  utils.html
docs/votuderep/commands/: derep.html  filter.html  getdbs.html  splitcoverm.html  tabulate.html  trainingdata.html
docs/votuderep/core/: blast.html  dereplication.html  filtering.html
docs/votuderep/utils/: io.html  logging.html  validators.html
docs_src/: api.md  index.md  installation.md  quickstart.md
docs_src/cli/: derep.md  filter.md  getdbs.md  index.md  splitcoverm.md  tabulate.md  trainingdata.md
src/votuderep/: __init__.py  __main__.py  cli.py
src/votuderep.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/votuderep/commands/: __init__.py  derep.py  filter.py  getdbs.py  splitcoverm.py  tabulate.py  trainingdata.py
src/votuderep/core/: __init__.py  blast.py  dereplication.py  filtering.py
src/votuderep/utils/: __init__.py  io.py  logging.py  validators.py
test/: input_assembly_virus_genes.tsv  quality_summary.tsv
tests/: __init__.py  coverm.tsv  test_derep.py  test_filter.py  test_splitcoverm.py
