[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "votuderep"
version = "0.1.0"
description = "A CLI tool for dereplicating and filtering viral contigs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Andrea Telatin", email = "andrea.telatin@gmail.com"}
]
keywords = ["bioinformatics", "viral", "contigs", "dereplication", "blast"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "rich>=13.0.0",
    "rich-click>=1.7.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyfastx>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
votuderep = "votuderep.cli:main"

[project.urls]
Homepage = "https://github.com/quadram-institute-bioscience/votuderep"
Documentation = "https://github.com/quadram-institute-bioscience/votuderep#readme"
Repository = "https://github.com/quadram-institute-bioscience/votuderep"
Issues = "https://github.com/quadram-institute-bioscience/votuderep/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
votuderep = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=votuderep --cov-report=term-missing"
